--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,5 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="SlidingTabAppTheme" parent="Theme.AppCompat.Light.NoActionBar"/>
 </resources>
